# PTCLTool

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  EffectTool.pro  README.md  Resource.h  mainwindow.cpp  mainwindow.h  typedefs.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release-build.yml
flatpak/: org.ExplosBlue.PTCLTool.metainfo.xml  org.ExplosBlue.PTCLTool.yml
include/: bitflagUtil.h  emitterSetWidget.h  emitterwidget.h  gr.h  imageUtil.h  imageutil.h  mainwindow.h  printUtil.h  ptclList.h  stringUtil.h  typedefs.h
include/editor/: ThumbnailWidget.h  alphaPropertiesWidget.h  alphaSlider.h  animGraph.h  basicPropertiesWidget.h  clickableLabel.h  collapsibleWidget.h  colorGradientEditor.h  colorPropertiesWidget.h  combinerPropertiesWidget.h  emissionPropertiesWidget.h  emitterSetWidget.h  emitterWidget.h  emitterwidget.h  enumComboBox.h  fluctuationEditorWidget.h  gradientSlider.h  gravityPropertiesWidget.h  lifespanPropertiesWidget.h  loadingSpinner.h  mainWindow.h  mainwindow.h  ptclList.h  ptclListWidget.h  rgbaColorWidget.h  rotationPropertiesWidget.h  scalePropertiesWidget.h  scalepropertieswidget.h  sizedSpinBox.h  stripeEditorWidget.h  terminationPropertiesWidget.h  textureImportDialog.h  textureListWidget.h  texturePropertiesWidget.h  textureSelectDialog.h  textureWidget.h  thumbnailWidget.h  transformPropertiesWidget.h  vectorSpinBox.h  velocityPropertiesWidget.h  (+1 more)
include/editor/childEditor/: alphaPropertiesWidget.h  basicPropertiesWidget.h  childEditorWidget.h  colorPropertiesWidget.h  combinerPropertiesWidget.h  emissionPropertiesWidget.h  rotationPropertiesWidget.h  scalePropertiesWidget.h  texturePropertiesWidget.h  velocityPropertiesWidget.h
include/editor/components/: animGraph.h  colorChannelSlider.h  colorGradientEditor.h  combinerPreviewWidget.h  enumComboBox.h  frameSelectorPopup.h  frameTimeline.h  rgbaColorWidget.h  sizedSpinBox.h  startframelist.h  texturePreview.h  thumbnailWidget.h  vectorSpinBox.h  viewportScrollBar.h
include/editor/emitterWidget/: alphaPropertiesWidget.h  basicPropertiesWidget.h  colorPropertiesWidget.h  combinerPropertiesWidget.h  emissionPropertiesWidget.h  emitterWidget.h  emitterWidgetBase.h  fluctuationEditorWidget.h  gravityPropertiesWidget.h  lifespanPropertiesWidget.h  rotationPropertiesWidget.h  scalePropertiesWidget.h  stripeEditorWidget.h  terminationPropertiesWidget.h  texturePropertiesWidget.h  transformPropertiesWidget.h  velocityPropertiesWidget.h  volumePropertiesWidget.h
include/editor/fieldEditor/: collisionDataWidget.h  convergenceDataWidget.h  fieldEditorWidget.h  magnetDataWidget.h  posAddDataWidget.h  randomDataWidget.h  spinDataWidget.h
include/editor/inspector/: alphaAnimInspector.h  alphaPropertiesWidget.h  basicPropertiesWidget.h  colorInspector.h  colorPropertiesWidget.h  combinerInspector.h  combinerPropertiesWidget.h  emissionInspector.h  emissionPropertiesWidget.h  emitterSetInspector.h  fluctuationEditorWidget.h  fluctuationInspector.h  generalEmitterInspector.h  gravityInspector.h  gravityPropertiesWidget.h  inspectorPanel.h  inspectorWidgetBase.h  lifespanInspector.h  lifespanPropertiesWidget.h  physicsInspector.h  rotationInspector.h  rotationPropertiesWidget.h  rotationScaleInspector.h  scaleAnimInspector.h  scalePropertiesWidget.h  shapeInspector.h  stripeEditorWidget.h  stripeInspector.h  terminationInspector.h  terminationPropertiesWidget.h  textureInspector.h  texturePropertiesWidget.h  transformInspector.h  transformPropertiesWidget.h  velocityInspector.h  velocityPropertiesWidget.h  volumeInspector.h  volumePropertiesWidget.h
include/etc1/: rg_etc1.h
include/gfx/: color.h
include/math/: matrix.h  util.h  vector.h
include/ptcl/: ptcl.h  ptclBinary.h  ptclChildData.h  ptclCommand.h  ptclDocument.h  ptclEmitter.h  ptclEmitterSet.h  ptclEnum.h  ptclEnums.h  ptclFieldData.h  ptclFluctuationData.h  ptclRes.h  ptclSeed.h  ptclStripeData.h  ptclTexture.h
include/util/: bitflagUtil.h  imageUtil.h  mathUtil.h  nameValidator.h  paintUtil.h  printUtil.h  randomUtil.h  settingsUtil.h  stringUtil.h
res/: org.ExplosBlue.PTCLTool.desktop
res/icons/: app_icon.icns
src/: emitterSetWidget.cpp  emitterwidget.cpp  imageUtil.cpp  imageutil.cpp  main.cpp  mainwindow.cpp  ptclList.cpp
src/editor/: PtclList.cpp  alphaPropertiesWidget.cpp  alphaSlider.cpp  animGraph.cpp  basicPropertiesWidget.cpp  clickableLabel.cpp  collapsibleWidget.cpp  colorGradientEditor.cpp  colorPropertiesWidget.cpp  combinerPropertiesWidget.cpp  emissionPropertiesWidget.cpp  emitterSetWidget.cpp  emitterWidget.cpp  emitterwidget.cpp  fluctuationEditorWidget.cpp  gradientSlider.cpp  gravityPropertiesWidget.cpp  lifespanPropertiesWidget.cpp  loadingSpinner.cpp  mainWindow.cpp  mainwindow.cpp  ptclListWidget.cpp  rgbaColorWidget.cpp  rotationPropertiesWidget.cpp  scalePropertiesWidget.cpp  scalepropertieswidget.cpp  stripeEditorWidget.cpp  terminationPropertiesWidget.cpp  textureImportDialog.cpp  textureListWidget.cpp  texturePropertiesWidget.cpp  textureSelectDialog.cpp  textureWidget.cpp  texturewidget.cpp  thumbnailWidget.cpp  transformPropertiesWidget.cpp  velocityPropertiesWidget.cpp  volumePropertiesWidget.cpp
src/editor/childEditor/: alphaPropertiesWidget.cpp  basicPropertiesWidget.cpp  childEditorWidget.cpp  colorPropertiesWidget.cpp  combinerPropertiesWidget.cpp  emissionPropertiesWidget.cpp  rotationPropertiesWidget.cpp  scalePropertiesWidget.cpp  texturePropertiesWidget.cpp  velocityPropertiesWidget.cpp
src/editor/components/: alphaSlider.cpp  animGraph.cpp  clickableLabel.cpp  collapsibleWidget.cpp  colorChannelSlider.cpp  colorGradientEditor.cpp  combinerPreviewWidget.cpp  frameSelectorPopup.cpp  (+8 more)
src/etc1/: rg_etc1.cpp
src/gfx/: color.cpp
src/ptcl/: ptcl.cpp  ptclBinary.cpp  ptclChildData.cpp  ptclCommand.cpp  ptclDocument.cpp  ptclEmitter.cpp  ptclEmitterSet.cpp  ptclEnum.cpp  ptclFieldData.cpp  ptclFluctuationData.cpp  ptclRes.cpp  ptclSeed.cpp  ptclStripeData.cpp  ptclTexture.cpp
src/util/: imageUtil.cpp  nameValidator.cpp  paintUtil.cpp  settingsUtil.cpp
(+97 files in other folders)
